<resources>
    <string name="app_name">SharkPlayer</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="file_folder_thumbnail">File/Folder thumbnail</string>
    <string name="more_options">More options</string>
    <string name="remove">Remove</string>
    <string name="play">Play</string>
    <string name="remove_from_favorite">Remove Favorite</string>
    <string name="set_audio_track">Set audio track</string>
    <string name="set_subtitle_track">Set subtitle track</string>
    <string name="unsupported_file">This file is not supported by SharkPlayer</string>
    <string name="folder_empty_hint">There are no files in this folder</string>
    <string name="permissions_hint">Please grant the permissions so that the app can work as expected</string>
    <string name="internal_storage_hint">Internal Storage</string>
    <string name="updates_hint">Check for updates</string>
    <string name="about">About</string>
    <string name="update_dialog_title">Update Available %s</string>
    <string name="open">Open</string>
    <string name="no_browser_found_hint">No browser found to open the link!</string>
    <string name="version">v%s</string>
    <string name="add_to_favorite">Add favorite</string>
    <string name="folder_not_found_hint">Folder does not exist.</string>
    <string name="enter_value">Enter value</string>
    <string name="invalid_track_index">Invalid track index</string>
    <string name="enter_track_index">Enter Track Index</string>
    <string name="audio">Audio</string>
    <string name="no_videos_in_folder">No videos found in the folder</string>
    <string name="rescale">Rescale</string>
    <string name="ffmpeg_notif_description">This is the channel used for showing notifications when doing ffmpeg operations</string>
    <string name="ffmpeg_channel_name">FFMPEG Operations</string>
    <string name="ffmpeg_notification_channel_id">ffmpeg_service_channel_id</string>
    <string name="rescale_cancel_notification">Cancel</string>
    <string name="rescale_options_title">Choose resolution</string>
    <string name="cancel">Cancel</string>
    <string name="video_corrupted">Video is corrupted</string>
    <string name="audio_corrupted">Audio is corrupted</string>
    <string name="delete">Delete</string>
    <string name="delete_video">Delete this video?</string>
    <string name="rescale_notification_title">Rescaling Video</string>
    <string name="rescale_notification_content">%s Rescaling from %dp to %s</string>
    <string name="no_workers_running">No workers running</string>
    <string name="download_subtitle">Download subtitle</string>
    <string name="search">Search</string>
    <string name="download_subtitle_item">Download subtitle item</string>
    <string name="lock_orientation">Lock Orientation</string>
    <string-array name="rescale_supported_resolutions">
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
    </string-array>
</resources>